--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
- "name": "@flat/in-app-purchase",
+ "name": "@BonnierNews/in-app-purchase",
  "description": "In-App-Purchase validation and subscription management for iOS, Android, Amazon, and Windows",
- "version": "1.13.2",
+ "version": "1.14.0",
  "author": {
   "name": "Nobuyori Takahashi",
   "email": "voltrue2@yahoo.com"
  },
  "repository": {
   "type": "git",
-  "url": "https://github.com/FlatIO/in-app-purchase.git"
+  "url": "https://github.com/BonnierNews/in-app-purchase.git"
  },
  "dependencies": {
   "fb": "^2.0.0",
