--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
  "name": "@BonnierNews/in-app-purchase",
  "description": "In-App-Purchase validation and subscription management for iOS, Android, Amazon, and Windows",
- "version": "1.14.0",
+ "version": "1.14.1",
  "author": {
   "name": "Nobuyori Takahashi",
   "email": "voltrue2@yahoo.com"
@@ -11,16 +11,16 @@
   "url": "https://github.com/BonnierNews/in-app-purchase.git"
  },
  "dependencies": {
+  "@xmldom/xmldom": "^0.8.1",
   "fb": "^2.0.0",
   "jwt-simple": "^0.5.6",
   "request": "2.88.2",
   "urlsafe-base64": "^1.0.0",
-  "xml-crypto": "2.1.3",
-  "@xmldom/xmldom": "0.7.5"
+  "xml-crypto": "2.1.3"
  },
  "devDependencies": {
-  "mocha": "9.2.1",
-  "eslint": "8.0.1"
+  "eslint": "^8.9.0",
+  "mocha": "9.2.1"
  },
  "scripts": {
   "lint": "make lint",
