--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "lint": "make lint",
   "test": "make lint && make test"
  },
- "#engine": "node >= 0.10.20",
+ "engines": {
+  "node": ">= 16.0.0"
+ },
  "contributors": [],
  "keywords": [
   "Apple",
