--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 19.x]
+        node-version: [16.x, 18.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -23,14 +23,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
-        run: npm ci
-        env:
-          CI: true
-          NODE_ENV: "test"
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
+      env:
+        CI: true
+        NODE_ENV: "test"
 
-      - name: Run Tests
-        run: npm test
-        env:
-          NODE_ENV: "test"
-          CI: true
+    - name: Run Tests
+      shell: 'script -q -e -c "bash {0}"'
+      run: yarn test
+      env:
+        NODE_ENV: "test"
+        CI: true
