--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@BonnierNews/in-app-purchase",
+  "name": "@bonniernews/in-app-purchase",
   "description": "In-App-Purchase validation and subscription management for iOS, Android, Amazon, and Windows",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "author": {
     "name": "Nobuyori Takahashi",
     "email": "voltrue2@yahoo.com"
@@ -20,6 +20,9 @@
   "devDependencies": {
     "eslint": "^8.27.0",
     "mocha": "^10.1.0"
+  },
+  "overrides": {
+    "tough-cookie": "^4.1.3"
   },
   "scripts": {
     "lint": "make lint",
