--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "url": "https://github.com/BonnierNews/in-app-purchase.git"
  },
  "dependencies": {
-  "@xmldom/xmldom": "^0.8.6",
+  "@xmldom/xmldom": "^0.8.10",
   "jwt-simple": "^0.5.6",
   "request": "2.88.2",
   "urlsafe-base64": "^1.0.0",
-  "xml-crypto": "^3.0.1"
+  "xml-crypto": "^3.2.0"
  },
  "devDependencies": {
-  "eslint": "^8.27.0",
-  "mocha": "^10.1.0"
+  "eslint": "^9.0.0",
+  "mocha": "^10.4.0"
  },
  "overrides": {
   "tough-cookie": "^4.1.3"
@@ -29,7 +29,7 @@
   "test": "make lint && make test"
  },
  "engines": {
-  "node": ">=16 <= 18"
+  "node": ">=18"
  },
  "contributors": [],
  "keywords": [
