--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "url": "https://github.com/BonnierNews/in-app-purchase.git"
  },
  "dependencies": {
-  "@xmldom/xmldom": "^0.8.6",
+  "@xmldom/xmldom": "^0.8.10",
   "jwt-simple": "^0.5.6",
   "request": "2.88.2",
   "urlsafe-base64": "^1.0.0",
-  "xml-crypto": "^3.0.1"
+  "xml-crypto": "^6.0.0"
  },
  "devDependencies": {
-  "eslint": "^8.27.0",
-  "mocha": "^10.1.0"
+  "eslint": "^9.0.0",
+  "mocha": "^10.4.0"
  },
  "overrides": {
   "tough-cookie": "^4.1.3"
@@ -29,7 +29,7 @@
   "test": "make lint && make test"
  },
  "engines": {
-  "node": ">=16 <= 18"
+  "node": ">=18"
  },
  "contributors": [],
  "keywords": [
@@ -47,60 +47,5 @@
   "Validation",
   "IAP"
  ],
- "eslintConfig": {
-  "parserOptions": {
-   "ecmaVersion": 6,
-   "sourceType": "module",
-   "jsx": true
-  },
-  "env": {
-   "node": true,
-   "es6": true,
-   "amd": true,
-   "mocha": true
-  },
-  "rules": {
-   "max-depth": 5,
-   "no-undef": "error",
-   "no-unused-vars": "error",
-   "no-cond-assign": "error",
-   "no-console": "warn",
-   "no-dupe-args": "error",
-   "no-dupe-keys": "error",
-   "no-empty": "error",
-   "no-duplicate-case": "error",
-   "no-func-assign": "error",
-   "no-inner-declarations": "warn",
-   "no-irregular-whitespace": "error",
-   "no-obj-calls": "error",
-   "no-sparse-arrays": "error",
-   "no-unreachable": "error",
-   "no-unsafe-negation": "error",
-   "use-isnan": "error",
-   "valid-typeof": "error",
-   "dot-notation": "warn",
-   "guard-for-in": "off",
-   "no-eval": "error",
-   "no-global-assign": "error",
-   "no-implicit-globals": "error",
-   "no-implied-eval": "error",
-   "no-loop-func": "error",
-   "no-octal": "off",
-   "no-octal-escape": "off",
-   "no-proto": "error",
-   "no-redeclare": "error",
-   "no-restricted-properties": "error",
-   "eqeqeq": "error",
-   "quotes": [
-    "error",
-    "single"
-   ],
-   "curly": "error",
-   "camelcase": "error",
-   "validthis": "off",
-   "bitwise": "off",
-   "semi": "error"
-  }
- },
  "license": "MIT"
 }
