--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "mocha": "^11.7.5"
  },
  "overrides": {
-  "tough-cookie": "^4.1.3"
+   "tough-cookie": "^6.0.0",
+   "form-data": "^4.0.4"
  },
  "scripts": {
   "lint": "make lint",
