--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
  "name": "@bonniernews/in-app-purchase",
  "description": "In-App-Purchase validation and subscription management for iOS, Android, Amazon, and Windows",
- "version": "5.0.0",
+ "version": "5.0.1",
  "author": {
   "name": "Nobuyori Takahashi",
   "email": "voltrue2@yahoo.com"
@@ -22,8 +22,11 @@
   "mocha": "^11.7.5"
  },
  "overrides": {
-   "tough-cookie": "^6.0.0",
-   "form-data": "^4.0.4"
+  "tough-cookie": "^6.0.0",
+  "form-data": "^4.0.4",
+  "mocha@^11.7.5": {
+   "glob": "^12.0.0"
+  }
  },
  "scripts": {
   "lint": "make lint",
